Raskere oppstart. Reformat code. (#990)