@@ -2,16 +2,14 @@ package no.nav.foreldrepenger.abonnent.web.app.exceptions;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import javax.validation.Path;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
+
+import no.nav.vedtak.exception.FunksjonellException;
 
 import org.hibernate.validator.internal.engine.path.PathImpl;
 import org.slf4j.Logger;
@@ -25,20 +23,19 @@ public class ConstraintViolationMapper implements ExceptionMapper<ConstraintViol
     public Response toResponse(ConstraintViolationException exception) {
         Collection<FeltFeilDto> feilene = new ArrayList<>();
 
-        Set<ConstraintViolation<?>> constraintViolations = exception.getConstraintViolations();
-        for (ConstraintViolation<?> constraintViolation : constraintViolations) {
+        var constraintViolations = exception.getConstraintViolations();
+        for (var constraintViolation : constraintViolations) {
             String feltNavn = getFeltNavn(constraintViolation.getPropertyPath());
             feilene.add(new FeltFeilDto(feltNavn, constraintViolation.getMessage()));
         }
-        List<String> feltNavn = feilene.stream().map(FeltFeilDto::navn).collect(Collectors.toList());
+        var feltNavn = feilene.stream().map(FeltFeilDto::navn).toList();
 
-        var feil = FeltValideringFeil.feltverdiKanIkkeValideres(feltNavn);
+        var feil = new FunksjonellException("FPT-328673",
+            String.format("Det oppstod en valideringsfeil på felt %s. Vennligst kontroller at alle feltverdier er korrekte.", feltNavn),
+            "Kontroller at alle feltverdier er korrekte");
+
         LOG.warn(feil.getMessage());
-        return Response
-                .status(Response.Status.BAD_REQUEST)
-                .entity(new FeilDto(feil.getMessage(), feilene))
-                .type(MediaType.APPLICATION_JSON)
-                .build();
+        return Response.status(Response.Status.BAD_REQUEST).entity(new FeilDto(feil.getMessage(), feilene)).type(MediaType.APPLICATION_JSON).build();
     }
 
     private String getFeltNavn(Path propertyPath) {
